--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.7",
@@ -25,6 +26,7 @@
     "react-katex": "^3.0.1",
     "react-router-dom": "^6.22.0",
     "react-scroll": "^1.9.0",
+    "react-social-icons": "^6.10.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
