--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -21,11 +21,14 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/joy": "^5.0.0-beta.27",
     "@mui/material": "^5.15.7",
+    "better-react-mathjax": "^2.0.3",
     "color-alpha": "^1.1.3",
     "katex": "^0.16.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
+    "react-latex": "^2.0.0",
+    "react-latex-next": "^2.2.0",
     "react-router-dom": "^6.22.0",
     "react-scroll": "^1.9.0",
     "react-social-icons": "^6.10.0",
@@ -35,6 +38,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-katex": "^3.0.4",
+    "@types/react-latex": "^2.0.3",
     "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
