--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -23,7 +24,9 @@
     "@mui/material": "^5.15.7",
     "better-react-mathjax": "^2.0.3",
     "color-alpha": "^1.1.3",
+    "formik": "^2.4.5",
     "katex": "^0.16.9",
+    "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
@@ -32,7 +35,8 @@
     "react-router-dom": "^6.22.0",
     "react-scroll": "^1.9.0",
     "react-social-icons": "^6.10.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
