--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-katex": "^3.0.1",
     "react-latex": "^2.0.0",
     "react-latex-next": "^2.2.0",
