--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "katex": "^0.16.9",
     "nodemailer": "^6.9.9",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-katex": "^3.0.1",
