--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-scroll": "^1.9.0",
     "react-social-icons": "^6.10.0",
     "react-type-animation": "^3.2.0",
+    "styled-components": "^6.1.13",
     "yup": "^1.3.3"
   },
   "devDependencies": {
