added new paper and blog

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/joy": "^5.0.0-beta.27",
     "@mui/material": "^5.15.7",
+    "@notionhq/client": "^2.2.15",
     "better-react-mathjax": "^2.0.3",
     "color-alpha": "^1.1.3",
     "formik": "^2.4.5",
